<resources>
    <string name="app_name">Gym</string>

    <string name="welcome">Welcome\n to\n GYM</string>
    <string name="action_settings">Settings</string>
    <string name="get_in_GYM">Get in the GYM</string>
    <string name="newUserButton">I`m new here, wanna get in!</string>
    <string name="registration_text">Just quickly fill your information and we go straight lifting some weights!!!</string>
    <string name="submit">submit</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="new_age">Your age</string>
    <string name="new_wrist_hint">Your wrist girth</string>
    <string name="new_height_hint">Your height (cm)</string>
    <string name="new_name_hint">Your name</string>
    <string name="existed_name_message">Please enter a different name./n User with such name already exists</string>
    <string name="empty_field_message">Please fill every field</string>
    <string name="logo_registration">logo</string>
    <string name="btn_customTraining">CUSTOM TRAINING</string>
    <string name="btn_choseProgram">CHOSE TRAINING PROGRAM</string>
    <string name="weight_request">Enter your current weight(kg)</string>
    <string name="weight_request_dialog_title">Enter current body weight</string>
    <string name="unchecked_sex_button_message">Please enter your sex</string>
    <string name="your_target_weight">Your target weight</string>
    <string name="recomended_programs_for_you">RECOMENDED PROGRAMS FOR YOU</string>
    <string name="you_should_gain">YOU SHOULD GAIN</string>
    <string name="you_should_lose">YOU SHOULD LOSE</string>
    <string name="search_hint">Enter the name of exercise you need</string>
    <string name="primary_muscle">Primary muscle: </string>
    <string name="sec_muscle">Secondary muscles: </string>
    <string name="description">Description</string>
    <string name="add_exercise">Add new exercise</string>
</resources>
