<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff5223">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registration_text"
            android:id="@+id/textView2"
            android:textSize="40sp"
            android:paddingTop="2dp"
            android:padding="3dp"
            android:autoText="false"
            android:singleLine="false"
            android:textAlignment="center"
            android:textStyle="normal"
            android:typeface="normal"
            android:textColor="@color/abc_primary_text_material_light" />
    </FrameLayout>
    <EditText
        android:id="@+id/new_name"
        android:textSize="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_name_hint"
        android:inputType="text"
        android:textColorHint="#ffff0d09"
        android:textColor="#ffd3d205"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </EditText>
    <EditText
        android:id="@+id/new_height"
        android:textSize="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_height_hint"
        android:inputType="number"
        android:layout_below="@+id/wrist_girth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="#ffff0d09"
        android:textColor="#ffd3d205" />
    <EditText
        android:id="@+id/wrist_girth"
        android:textSize="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_wrist_hint"
        android:inputType="number"
        android:layout_below="@+id/new_age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColorHint="#ffff0d09"
        android:textColor="#ffd3d205">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:id="@+id/new_age"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="#ffff0d09"
        android:textColor="#ffd3d205"
        android:hint="@string/new_age"
        android:inputType="number"
        android:editable="false" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/new_age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/maleBtn"
            android:textSize="30dp"
            android:layout_weight="0.53"
            android:textColorHint="#ffff0d09"
            android:textColor="#ffd3d205" />

        <RadioButton
            android:layout_width="wrap_content"
            android:textSize="30dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/femaleBtn"
            android:layout_weight="0.07"
            android:textColor="#ffd3d205" />
    </RadioGroup>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitBtn"
        android:textSize="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:focusable="true"
        android:singleLine="false"
        android:onClick="submit" />

</LinearLayout>