<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff5223">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:text="@string/btn_customTraining"
        android:id="@+id/customTrainingTV"
        android:layout_marginTop="40dp"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="120sp"
        android:text="@string/btn_choseProgram"
        android:id="@+id/trainingSolutionsTV"
        android:textSize="40sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/recomended_programs_for_you"
                android:id="@+id/textView3"
                android:gravity="center"
                android:textStyle="normal" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:layout_marginTop="15dp" />
        </TableLayout>

        <TableLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/your_target_weight"
                android:id="@+id/targetWeightTitle"
                android:layout_weight="1"
                android:gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="DEMO"
                android:id="@+id/targetWeight"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="ACTION"
                android:id="@+id/weightAction"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="432234"
                android:id="@+id/weightActionChangeKG"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold" />
        </TableLayout>
    </LinearLayout>

</TableLayout>